Possible fix for text wrapping in the control panel on a mac

--- a/eems_online_app/static/css/base.css
+++ b/eems_online_app/static/css/base.css
@@ -435,6 +435,7 @@ li a.active {
 	line-height: 43px;
 	font-size: .95em;
 	width: calc(100% - 560px);
+	white-space:nowrap;
 }
 
 .node_icon {
